@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- FortrezZ: WWA-02 Water and Temperature Alarm -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="byte" genre="config" instance="1" index="1" label="Low Temperature Trigger Point" units="degrees" min="0" max="255" value="4">
+            <Help></Help>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="2" label="High Temperature Trigger Point" units="degrees" min="0" max="255" value="70">
+            <Help></Help>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="3">
+            <Group index="1" max_associations="2" label="Water Alarm or Heat Alarm"/>
+            <Group index="2" max_associations="2" label="Water Alarm"/>
+            <Group index="3" max_associations="2" label="Temperature Alarm"/>
+        </Associations>
+    </CommandClass>
+</Product>
