@@ -99,6 +99,7 @@ Version 1.5
  - Pull Request #974 - Add support for AU/NZ Frequency Remotec ZXT120 IR Controller from philhawthorne (Nechry)
  - Pull Request #972 - Neo CoolCam Battery Powered PIR Sensor from LouiS22 (Nechry)
  - Add Wenzhou TKB Control System TZ55 and TZ56 from sarakha63 (Nechry)
+ - Add FortrezZ WWA-02 Water and Temperature Alarm (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
